--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.PowerPoint" version="15.0.4420.1017" targetFramework="net472" />
   <package id="NETStandard.Library" version="2.0.0" targetFramework="net472" />
+  <package id="System.Data.SQLite" version="1.0.111.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.111.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.EF6" version="1.0.111.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Linq" version="1.0.111.0" targetFramework="net472" />
 </packages>
