--- a/AutoPoint.csproj
+++ b/AutoPoint.csproj
@@ -75,6 +75,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormEnterSong.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormEnterSong.Designer.cs">
+      <DependentUpon>FormEnterSong.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
