Create PowerPointManager to manage powerpoint/slides creation

--- a/AutoPoint.csproj
+++ b/AutoPoint.csproj
@@ -81,6 +81,7 @@
     <Compile Include="FormEnterSong.Designer.cs">
       <DependentUpon>FormEnterSong.cs</DependentUpon>
     </Compile>
+    <Compile Include="PowerPointManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
