Order by title_and_artist when selecting from songDB. This fixes a bug where sorting from ListBox does not adjust the selected value correctly.

--- a/AutoPoint.csproj
+++ b/AutoPoint.csproj
@@ -87,6 +87,7 @@
     <Compile Include="FormEnterSong.Designer.cs">
       <DependentUpon>FormEnterSong.cs</DependentUpon>
     </Compile>
+    <Compile Include="ListBoxItem.cs" />
     <Compile Include="PowerPointManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
